Alterando media query cards

--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -138,11 +138,204 @@
     <i class="icon ion-social-whatsapp" id="whatsapp"></i>
 </a>
 <!--Card images-->
+<div class="titulo-card">
+    <h1> Lançamentos Em Brasília</h1>
+    <h3>Conheça os nossos empreendimentos</h3>
+</div>
 <section class="grid-1">
-    <div class="col1"></div>
-    <div class="col2"></div>
-    <div class="col3"></div>
-    <div class="col4"></div>
+    <div class="col-bg">
+        <!-- p1 -->
+        <section class="carousel1" aria-label="Gallery">
+            <ol class="carousel__viewport">
+                <li id="carousel__slide1-p1" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper">
+
+                    </div>
+                </li>
+                <li id="carousel__slide2-p1" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+
+                </li>
+                <li id="carousel__slide3-p1" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+
+                </li>
+                <li id="carousel__slide4-p1" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+                </li>
+            </ol>
+            <aside class="carousel__navigation">
+                <ol class="carousel__navigation-list">
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide1-p1" class="carousel__navigation-button">Go to slide 1</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide2-p1" class="carousel__navigation-button">Go to slide 2</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide3-p1" class="carousel__navigation-button">Go to slide 3</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide4-p1" class="carousel__navigation-button">Go to slide 4</a>
+                    </li>
+                </ol>
+            </aside>
+        </section>
+        <h3>Ceilândia Sul</h3>
+        <h4>Ceilandia/DF</h4>
+        <h3>Torres do Campo</h3>
+        <br>
+        <h4><span class="linha">Entrada</span>Facilitada</h4>
+        <p><span class="material-symbols-outlined">
+                family_restroom
+            </span>Lazer equipado</p>
+        <p><span class="material-symbols-outlined">
+                solar_power
+            </span>Energia Solar Áreas Comuns</p>
+        <p><span class="material-symbols-outlined">
+                door_sliding
+            </span>Elevador</p>
+        <h3 id="flutuante">2 Quartos</h3>
+        <a class="slide-btn" href="#">Saiba Mais</a>
+
+    </div>
+    <div class="col-bg">
+        <!-- p2 -->
+        <section class="carousel1" aria-label="Gallery">
+            <ol class="carousel__viewport">
+                <li id="carousel__slide1-p2" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper">
+
+                    </div>
+                </li>
+                <li id="carousel__slide2-p2" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+
+                </li>
+                <li id="carousel__slide3-p2" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+
+                </li>
+                <li id="carousel__slide4-p2" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+                </li>
+            </ol>
+            <aside class="carousel__navigation">
+                <ol class="carousel__navigation-list">
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide1-p2" class="carousel__navigation-button">Go to slide 1</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide2-p2" class="carousel__navigation-button">Go to slide 2</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide3-p2" class="carousel__navigation-button">Go to slide 3</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide4-p2" class="carousel__navigation-button">Go to slide 4</a>
+                    </li>
+                </ol>
+            </aside>
+        </section>
+        <h3>Região Samambaia Sul</h3>
+        <h4>Samambaia/DF</h4>
+        <h3>Belo Viver</h3>
+        <br>
+        <h4><span class="linha2">Lazer</span>Equipado</h4>
+        <p><span class="material-symbols-outlined">
+                family_restroom
+            </span>Lazer equipado</p>
+        <p><span class="material-symbols-outlined">
+                solar_power
+            </span>Energia Solar Áreas Comuns</p>
+        <p><span class="material-symbols-outlined">
+                door_sliding
+            </span>Elevador</p>
+        <h3 id="flutuante">2 Quartos</h3>
+
+        <a class="slide-btn2" href="#">Saiba Mais</a>
+    </div>
+    <div class="col-bg">
+        <!-- p3 -->
+
+        <section class="carousel1" aria-label="Gallery">
+            <ol class="carousel__viewport">
+                <li id="carousel__slide1-p3" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper">
+
+                    </div>
+                </li>
+                <li id="carousel__slide2-p3" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+
+                </li>
+                <li id="carousel__slide3-p3" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+
+                </li>
+                <li id="carousel__slide4-p3" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+                </li>
+            </ol>
+            <aside class="carousel__navigation">
+                <ol class="carousel__navigation-list">
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide1-p3" class="carousel__navigation-button">Go to slide 1</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide2-p3" class="carousel__navigation-button">Go to slide 2</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide3-p3" class="carousel__navigation-button">Go to slide 3</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide4-p3" class="carousel__navigation-button">Go to slide 4</a>
+                    </li>
+                </ol>
+            </aside>
+
+        </section>
+    </div>
+    <div class="col-bg">
+
+        <!-- p4 -->
+        <section class="carousel1" aria-label="Gallery">
+            <ol class="carousel__viewport">
+                <li id="carousel__slide1-p4" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper">
+
+                    </div>
+                </li>
+                <li id="carousel__slide2-p4" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+
+                </li>
+                <li id="carousel__slide3-p4" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+
+                </li>
+                <li id="carousel__slide4-p4" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+                </li>
+            </ol>
+            <aside class="carousel__navigation">
+                <ol class="carousel__navigation-list">
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide1-p4" class="carousel__navigation-button">Go to slide 1</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide2-p4" class="carousel__navigation-button">Go to slide 2</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide3-p4" class="carousel__navigation-button">Go to slide 3</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide4-p4" class="carousel__navigation-button">Go to slide 4</a>
+                    </li>
+                </ol>
+            </aside>
+        </section>
+    </div>
 </section>
 
 <!-- Nossa Proposta -->
