some fixes on cards home

--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -55,7 +55,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="../Sobre/index.html">Serviços</a>
+                        <a class="nav-link" href="../Servicos/index.html">Serviços</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../Contato/index.html">Contato</a>
@@ -181,23 +181,26 @@
                 </ol>
             </aside>
         </section>
-        <h3>Ceilândia Sul</h3>
-        <h4>Ceilandia/DF</h4>
-        <h3>Torres do Campo</h3>
-        <br>
-        <h4><span class="linha">Entrada</span>Facilitada</h4>
-        <p><span class="material-symbols-outlined">
-                family_restroom
-            </span>Lazer equipado</p>
-        <p><span class="material-symbols-outlined">
-                solar_power
-            </span>Energia Solar Áreas Comuns</p>
-        <p><span class="material-symbols-outlined">
-                door_sliding
-            </span>Elevador</p>
-        <h3 id="flutuante">2 Quartos</h3>
-        <a class="slide-btn" href="#">Saiba Mais</a>
+        <div class="casas-info">
+            <h3>Ceilândia Sul</h3>
+            <h4>Ceilandia/DF</h4>
+            <h3>Torres do Campo</h3>
 
+            <h4><span class="linha">Entrada</span>Facilitada</h4>
+            <p><span class="material-symbols-outlined">
+                    bed
+                </span>2 Quartos</p>
+            <p><span class="material-symbols-outlined">
+                    family_restroom
+                </span>Lazer equipado</p>
+            <p><span class="material-symbols-outlined">
+                    solar_power
+                </span>Energia Solar Áreas Comuns</p>
+            <p><span class="material-symbols-outlined">
+                    door_sliding
+                </span>Elevador</p>
+            <a class="slide-btn" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais</a>
+        </div>
     </div>
     <div class="col-bg">
         <!-- p2 -->
@@ -237,23 +240,28 @@
                 </ol>
             </aside>
         </section>
-        <h3>Região Samambaia Sul</h3>
-        <h4>Samambaia/DF</h4>
-        <h3>Belo Viver</h3>
-        <br>
-        <h4><span class="linha2">Lazer</span>Equipado</h4>
-        <p><span class="material-symbols-outlined">
-                family_restroom
-            </span>Lazer equipado</p>
-        <p><span class="material-symbols-outlined">
-                solar_power
-            </span>Energia Solar Áreas Comuns</p>
-        <p><span class="material-symbols-outlined">
-                door_sliding
-            </span>Elevador</p>
-        <h3 id="flutuante">2 Quartos</h3>
+        <div class="casas-info">
+            <h3>Região Samambaia Sul</h3>
+            <h4>Samambaia/DF</h4>
+            <h3>Belo Viver</h3>
 
-        <a class="slide-btn2" href="#">Saiba Mais</a>
+            <h4><span class="linha2">Lazer</span>Equipado</h4>
+            <p><span class="material-symbols-outlined">
+                    bed
+                </span>2 Quartos</p>
+            <p><span class="material-symbols-outlined">
+                    family_restroom
+                </span>Lazer equipado</p>
+            <p><span class="material-symbols-outlined">
+                    solar_power
+                </span>Energia Solar Áreas Comuns</p>
+            <p><span class="material-symbols-outlined">
+                    door_sliding
+                </span>Elevador</p>
+
+
+            <a class="slide-btn2" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais</a>
+        </div>
     </div>
     <div class="col-bg">
         <!-- p3 -->
@@ -295,23 +303,26 @@
             </aside>
 
         </section>
-        <h3>Cidade jardins</h3>
-        <h4>Valparaíso/GO</h4>
-        <h3>Belle giardino</h3>
-        <br>
-        <h4><span class="linha2">entrada</span>facilitada</h4>
-        <p><span class="material-symbols-outlined">
-                family_restroom
-            </span>Lazer equipado</p>
-        <p><span class="material-symbols-outlined">
-                solar_power
-            </span>Energia Solar Áreas Comuns</p>
-        <p><span class="material-symbols-outlined">
-                door_sliding
-            </span>Elevador</p>
-        <h3 id="flutuante">2 Quartos</h3>
+        <div class="casas-info">
+            <h3>Cidade jardins</h3>
+            <h4>Valparaíso/GO</h4>
+            <h3>Belle giardino</h3>
+            <h4><span class="linha2">entrada</span>facilitada</h4>
+            <p><span class="material-symbols-outlined">
+                    bed
+                </span>2 Quartos</p>
+            <p><span class="material-symbols-outlined">
+                    family_restroom
+                </span>Lazer equipado</p>
+            <p><span class="material-symbols-outlined">
+                    solar_power
+                </span>Energia Solar Áreas Comuns</p>
+            <p><span class="material-symbols-outlined">
+                    door_sliding
+                </span>Elevador</p>
 
-        <a class="slide-btn2" href="#">Saiba Mais</a>
+            <a class="slide-btn2" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais</a>
+        </div>
     </div>
     <div class="col-bg">
 
@@ -320,29 +331,17 @@
             <ol class="carousel__viewport">
                 <li id="carousel__slide1-p4" tabindex="0" class="carousel__slide">
                     <div class="carousel__snapper">
-                        <section class="p4">
 
-                            <h1>Breve Lançamento no Gama</h1>
-                            <h3>cadastre-se</h3>
-                            <div class="mrv">
-                                <img src="../assets/images/ComLogo-SemImoveis.svg" alt="">
-                                <img src="../assets/images/mrv-logo-2019.svg" alt="">
-                            </div>
-                        </section>
                     </div>
                 </li>
                 <li id="carousel__slide2-p4" tabindex="0" class="carousel__slide">
                     <div class="carousel__snapper"></div>
-
-                    <section class="p4">
-
-                        <h1>Breve Lançamento em Águas Claras</h1>
-                        <h3>cadastre-se</h3>
-                        <div class="mrv">
-                            <img src="../assets/images/ComLogo-SemImoveis.svg" alt="">
-                            <img src="../assets/images/mrv-logo-2019.svg" alt="">
-                        </div>
-                    </section>
+                </li>
+                <li id="carousel__slide3-p4" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+                </li>
+                <li id="carousel__slide4-p4" tabindex="0" class="carousel__slide">
+                    <div class="carousel__snapper"></div>
                 </li>
             </ol>
             <aside class="carousel__navigation">
@@ -353,9 +352,36 @@
                     <li class="carousel__navigation-item">
                         <a href="#carousel__slide2-p4" class="carousel__navigation-button">Go to slide 2</a>
                     </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide3-p4" class="carousel__navigation-button">Go to slide 3</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                        <a href="#carousel__slide4-p4" class="carousel__navigation-button">Go to slide 4</a>
+                    </li>
                 </ol>
             </aside>
         </section>
+        <div class="casas-info">
+            <h4>Lago norte/DF</h4>
+            <h3>Lar residencial e SPA urbano</h3>
+
+            <h4><span class="linha2">Cobertura</span>linear</h4>
+            <p><span class="material-symbols-outlined">
+                    bed
+                </span>3 Suítes</p>
+            <p><span class="material-symbols-outlined">
+                    family_restroom
+                </span>Lazer equipado</p>
+            <p><span class="material-symbols-outlined">
+                    solar_power
+                </span>Piscina climatizada</p>
+            <p><span class="material-symbols-outlined">
+                    door_sliding
+                </span>Elevador com acionamento individual</p>
+
+            <a class="slide-btn2" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais</a>
+        </div>
+    </div>
     </div>
 </section>
 
