--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -182,7 +182,6 @@
             </aside>
         </section>
         <div class="casas-info">
-            <h3>Ceilândia Sul</h3>
             <h4>Ceilandia/DF</h4>
             <h3>Torres do Campo</h3>
 
@@ -241,7 +240,6 @@
             </aside>
         </section>
         <div class="casas-info">
-            <h3>Região Samambaia Sul</h3>
             <h4>Samambaia/DF</h4>
             <h3>Belo Viver</h3>
 
@@ -260,7 +258,7 @@
                 </span>Elevador</p>
 
 
-            <a class="slide-btn2" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais</a>
+            <a class="slide-btn" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais</a>
         </div>
     </div>
     <div class="col-bg">
@@ -304,7 +302,6 @@
 
         </section>
         <div class="casas-info">
-            <h3>Cidade jardins</h3>
             <h4>Valparaíso/GO</h4>
             <h3>Belle giardino</h3>
             <h4><span class="linha2">entrada</span>facilitada</h4>
@@ -321,7 +318,7 @@
                     door_sliding
                 </span>Elevador</p>
 
-            <a class="slide-btn2" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais</a>
+            <a class="slide-btn" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais</a>
         </div>
     </div>
     <div class="col-bg">
@@ -363,7 +360,7 @@
         </section>
         <div class="casas-info">
             <h4>Lago norte/DF</h4>
-            <h3>Lar residencial e SPA urbano</h3>
+            <h3>Lar residencial & SPA urbano</h3>
 
             <h4><span class="linha2">Cobertura</span>linear</h4>
             <p><span class="material-symbols-outlined">
@@ -377,7 +374,7 @@
                 </span>Piscina climatizada</p>
             <p><span class="material-symbols-outlined">
                     door_sliding
-                </span>Elevador com acionamento individual</p>
+                </span>Elevador com automação</p>
 
             <a class="slide-btn2" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais</a>
         </div>
