--- a/Front-End/pages/Servicos/index.html
+++ b/Front-End/pages/Servicos/index.html
@@ -150,6 +150,12 @@
             </svg>
             <a href="#aluguel" class="hover-underline-animation">Aluguel de imóveis</a>
           </li>
+          <li class="cta">
+            <svg id="arrow-horizontal" xmlns="http://www.w3.org/2000/svg" width="30" height="10" viewBox="0 0 46 16">
+              <path id="Path_10" data-name="Path 10" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" fill="#fff" transform="translate(30)"></path>
+            </svg>
+            <a href="#admin" class="hover-underline-animation">Administração de imóveis</a>
+          </li>
         </ul>
       </section>
     </div>
@@ -330,6 +336,26 @@
           </div>
         </div>
       </article>
+      <a name="admin"></a>
+      <article class="article-container">
+        <div class="article-item">
+          <h1>Administração de imóveis</h1>
+          <p>Estão entre as funções do <span>adminstrador</span> imobiliário a elaboração dos contratos, a cobrança dos aluguéis, ações e despejos, além de conhecer bem os direitos da vizinhança, leis estaduais e municipais e tributação de imóveis.
+            <br>
+            <span>Administrar</span> um imóvel se refere aos atos de gerenciamento. O corretor de imóveis deve auxiliar o proprietário a cuidar de seu patrimônio. Para isso, o profissional deve apresentar uma boa organização, uma estrutura eficiente, além de prestar também orientação financeira ao cliente
+            <br>
+            Traga seu imóvel para para a C Oliveira que nós cuidamos de todos os detalhes para você.
+          </p>
+          <div class="center">
+            <a class="saibamais" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">Saiba Mais
+            </a>
+          </div>
+        </div>
+        <div class="article-img">
+          <img src="./images/admin 1.svg" alt="">
+        </div>
+      </article>
+      <br><br>
     </section>
 
 
